--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-config = { version= "1.2.0", features = ["behavior-version-latest"] }
-aws-sdk-dynamodb = "1.22.0"
+aws-config = { version= "1.2.1", features = ["behavior-version-latest"] }
+aws-sdk-dynamodb = "1.23.0"
 tokio = { version = "1", features = ["full"] }
-websocket = "0.27"
+tokio-tungstenite = "0.21"
+futures-util = "0.3"
