--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio-tungstenite = "0.21"
 futures-util = "0.3"
 url = "2.5.0"
 httparse = "1.8.0"
+serde_with = "3.8"
 uuid = { version = "1.8", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
