--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 aws-config = { version= "1.4.0", features = ["behavior-version-latest"] }
 aws-sdk-dynamodb = "1.28.0"
+anyhow = "1.0"
+reqwest = {version = "0.11",features = ["json", "stream"]}
 tokio = { version = "1", features = ["full"] }
 tokio-tungstenite = "0.21"
 futures-util = "0.3"
@@ -15,3 +17,4 @@ serde_with = "3.8"
 uuid = { version = "1.8", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+dotenv = "0.15"
